--- a/package.json
+++ b/package.json
@@ -5,39 +5,44 @@
     "node": "16.14"
   },
   "scripts": {
-    "dev": "sh tools/dev.sh",
+    "dev": "sh ./scripts/dev.sh",
     "prebuild": "yarn cleanup",
     "build": "next build && next export -o ./dist/out",
-    "cleanup": "rm -rf dist/",
-    "serve": "serve -p 8080 ./dist/out",
-    "deploy": "sh tools/deploy.sh"
+    "cleanup": "rm -rf ./dist/",
+    "serve": "serve -p 3000 ./dist/out"
   },
   "dependencies": {
-    "next": "^9.4.0",
-    "polished": "^3.4.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^4.4.1",
-    "styled-icons": "^9.1.0"
+    "classnames": "^2.3.1",
+    "glob": "^7.2.0",
+    "next": "^12.1.0",
+    "next-themes": "^0.0.15",
+    "polished": "^4.1.4",
+    "prism-react-renderer": "^1.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "7.7.5",
-    "@types/node": "^12.12.8",
-    "@types/react": "^16.9.11",
-    "@types/styled-components": "^4.4.0",
-    "@types/webpack": "^4.41.0",
-    "@typescript-eslint/eslint-plugin": "2.11.0",
-    "@typescript-eslint/parser": "2.11.0",
-    "babel-plugin-styled-components": "^1.10.6",
+    "@babel/core": "^7.14.6",
+    "@linaria/babel-preset": "^3.0.0-beta.15",
+    "@linaria/shaker": "^3.0.0-beta.15",
+    "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/react": "^2.0.0",
+    "@next/mdx": "^12.1.0",
+    "@types/glob": "^7.2.0",
+    "@types/react": "^17.0.39",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "circular-dependency-plugin": "^5.2.0",
-    "eslint": "6.7.2",
-    "eslint-config-prettier": "6.7.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-prettier": "3.1.1",
+    "eslint": "^8.9.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.14.2",
-    "prettier": "1.19.1",
-    "serve": "^11.0.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "typescript": "3.7.3"
+    "linaria": "^2.3.1",
+    "next-linaria": "^0.11.0",
+    "prettier": "^2.5.1",
+    "serve": "^13.0.2",
+    "typescript": "^4.5.5"
   }
 }
