--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "linaria": "^2.3.1",
     "next-linaria": "^0.11.0",
     "prettier": "^2.5.1",
+    "reading-time": "^1.5.0",
     "serve": "^13.0.2",
     "typescript": "^4.5.5"
   }
