--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   },
   "scripts": {
     "dev": "sh ./scripts/dev.sh",
-    "prebuild": "yarn cleanup",
+    "prebuild": "yarn cleanup && yarn lint",
     "build": "next build && next export -o ./dist/out",
     "cleanup": "rm -rf ./dist/",
-    "serve": "serve -p 3000 ./dist/out"
+    "serve": "serve -p 3000 ./dist/out",
+    "lint": "eslint \"./src/**/*.mdx\""
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.18",
@@ -20,7 +21,8 @@
     "polished": "^4.1.4",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -31,18 +33,15 @@
     "@types/glob": "^7.2.0",
     "@types/react": "^17.0.39",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
     "circular-dependency-plugin": "^5.2.0",
     "eslint": "^8.9.0",
     "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-mdx": "^1.16.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.14.2",
     "linaria": "^2.3.1",
     "next-linaria": "^0.11.0",
     "prettier": "^2.5.1",
-    "reading-time": "^1.5.0",
     "responsive-loader": "^2.3.0",
     "serve": "^13.0.2",
     "sharp": "^0.30.1",
