--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reading-time": "^1.5.0"
+    "react-intersection-observer": "^8.33.1",
+    "reading-time": "^1.5.0",
+    "serialize-javascript": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -32,6 +34,7 @@
     "@next/mdx": "^12.1.0",
     "@types/glob": "^7.2.0",
     "@types/react": "^17.0.39",
+    "@types/serialize-javascript": "^5.0.2",
     "@types/webpack": "^5.28.0",
     "circular-dependency-plugin": "^5.2.0",
     "eslint": "^8.9.0",
